# blog

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  LICENSE  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  generate_desc.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  sitemap.yaml
.cursor/rules/: development-workflow.mdc
.github/workflows/: ci.yml
404/: index.html
_index_old_jason/: index.html
archive_jason/.posts_archive_old/: rag-plusplus.md  (+1 more)
books/: index.html
docs/: 404.md  ai-code-retrieval-primer.md  git-setup-guide-notes.md  git-setup-guide.md  index.md  interactive-features-guide.md  robots.txt  test-cache.md
drafts/: ai-governance.md  ai-learning-model.md  ai-native-2025-tool-hopping.md  ai-native-build-own-eval-fast.md  ai-native-context-engineering.md  ai-native-human-on-the-loop.md  ai-native-master-map.md  draft-three-lessons.md
expert-calls/: index.html
experts-and-vendors/: index.html
git-setup-guide/: index.html
git-setup-guide-notes/: index.html
includes/: mkdocs.md  one-on-one-session.md  voting_widget.md
interactive-features-guide/: index.html
investments/: index.html
plans/: git-guide-plan.md  git-setup-guide-notes.md  go-live.md  gsc-fix-plan-2026-01-07.md  sop.md
resume/: index.html
scripts/: dev_with_voting.sh
search/: search_index.json
services/: index.html
systematically-improve-your-rag/: index.html
test-cache/: index.html
things/: index.html
user_manual/: index.html
writing/: index.html
writing-samples/: index.html
(+23 files in other folders)
